network-policy/allow-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          name: ingress-nginx
